fixed scrollbar

--- a/less/documentDBFabric.less
+++ b/less/documentDBFabric.less
@@ -216,7 +216,7 @@ a:focus {
 }
 
 .tabPanesContainer {
-  overflow: auto !important;
+  overflow: hidden;
 }
 
 .tabs-container {
